<resources>
    <string name="app_name">Super Trunfo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_title_fragment">Hello title fragment</string>
    <string name="home_fragment_description">O jogo épico de cartas da Grow, agora no seu dispositivo Android!</string>
    <string name="play_button">Jogar</string>
    <string name="made_by">
        Este aplicativo foi desenvolvido com propósitos estudantis.\n
        Veja a seção about para mais informações.
    </string>
    <string name="about_description">
        Olá!\n
        Eu sou Eduardo, o desenvolvedor deste app.\n\n
        Como fã do jogo da Grow - o qual cresci jogando com meus amigos - e também estudante de
        desenvolvimento Android, pensei que seria uma ótima oportunidade para aprimorar meus
        conhecimentos e habilidades.\n\n
        Espero que você goste e, caso deseje, não hesite em me contatar através de um dos canais abaixo.
    </string>
    <string name="collection_pick">Escolha um deck:</string>
    <string name="call_button">Chamar</string>
    <string name="card_name">Nome do card</string>
    <string name="opponent_cards">Oponente</string>
    <string name="your_cards">Você</string>
    <string name="number_your_cards">0</string>
    <string name="number_opp_cards">0</string>
    <string name="your_stat">Você</string>
    <string name="opponent_stat">Oponente</string>
    <string name="option1_radio">Opção 1</string>
    <string name="option2_radio">Opção 2</string>
    <string name="option3_radio">Opção 3</string>
    <string name="option4_radio">Opção 4</string>
    <string name="card_id">A1</string>
    <string name="L">L</string>
    <string name="W">W</string>
    <string name="you_lost">Tente novamente!</string>
    <string name="you_win">Você venceu a batalha!</string>
    <string name="not_now">Agora não</string>
    <string name="lets_doit">Vamos lá</string>
    <string name="play_again">Jogar novamente</string>
    <string name="super_trunfo">Super Trunfo</string>
    <string name="waiting_connection">Carregando lista de temas…</string>
</resources>